Add a farm like game to Main PositionSystem now exists and has a function to search Position Components by location

--- a/ConsoleECS/ConsoleECS.csproj
+++ b/ConsoleECS/ConsoleECS.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Core\Systems\ColliderSystem.cs" />
     <Compile Include="Core\Systems\EnvironmentSystem.cs" />
     <Compile Include="Core\Systems\GuiLayerSystem.cs" />
+    <Compile Include="Core\Systems\PositionSystem.cs" />
     <Compile Include="Core\Systems\RendererSystem.cs" />
     <Compile Include="Core\Components\Position.cs" />
     <Compile Include="Core\Components\Renderer.cs" />
@@ -66,11 +67,15 @@
     <Compile Include="Core\Systems\ScriptSystem.cs" />
     <Compile Include="Core\Vector\Vector2.cs" />
     <Compile Include="Core\Vector\Vector2Int.cs" />
+    <Compile Include="FarmGame\Components\Crop.cs" />
+    <Compile Include="FarmGame\Components\Player.cs" />
+    <Compile Include="FarmGame\Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
