+ default loop of a component system needs to be a for loop (rather than foreach) so it can handle adding components well

--- a/ConsoleECS/ConsoleECS.csproj
+++ b/ConsoleECS/ConsoleECS.csproj
@@ -76,6 +76,7 @@
     <Compile Include="FarmGame\Components\PlantBox.cs" />
     <Compile Include="FarmGame\Components\Player.cs" />
     <Compile Include="FarmGame\Components\Seed.cs" />
+    <Compile Include="FarmGame\Components\SeedBox.cs" />
     <Compile Include="FarmGame\EntityFactory.cs" />
     <Compile Include="FarmGame\Game.cs" />
     <Compile Include="Core\SceneManagement\Scene.cs" />
